@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-14062.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-14157.tgz',
      'xapian-core.tgz',
-     '3ebfa9d9761dfc86a98df8ff5257da07b7c22d75',
+     '796ac4192c75e7a1a9638aacc92beb39b1ce775f',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-14062.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-14157.tgz',
      'xapian-bindings.tgz',
-     '916375b81d08f3126f1752333232fbdf69341faa',
+     '038cc109f5418ee31cf5765a360fe29b5a4f31c1',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-14062.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-14157.tgz',
      'win32msvc.tgz',
-     'cbbed91f282a8517e70cfdbfa16ebe06b722a8e3',
+     '6385533bf4696dd545cfa46a6c9c0d33fc971887',
      'xapian-core/win32',
     ),
     ('Xapian extras',
